--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   build-and-push-ecr-image:
     name: Build and push to Amazon ECR
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: check out the code 
