--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,7 +14,7 @@ jobs:
     - name: check out the code 
       uses: actions/checkout@v2
 
-    - name: Install Utitlities
+    - name: Install Utilities
       run: 
         sudo apt-get update
         sudo apt-get install -y jq unzip
