--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install Utilities
-      run: 
+      run: |
         sudo apt-get update
         sudo apt-get install -y jq unzip
 
